# VersatileEngine

./: .gitignore  AUTHORS  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  test_compile_var.cpp  test_html.cpp  test_pugi.cpp
core/: CMakeLists.txt  PLATFORM_COMPARISON.md
core/example/: CMakeLists.txt  example_command.cpp  example_loop.cpp  example_node.cpp  example_service.cpp  example_var.cpp
core/include/: veCommon  veData  veModule
core/include/ve/: entry.h  global.h
core/platform/linux/: CONFIG_GUIDE.md  QUICK_START.md  README.md  rescue.cpp
core/platform/unsupported/: rescue.cpp  rescue.h
core/platform/win/: rescue.cpp  rescue.h
core/script/: test.ps1  test.sh
core/src/: base.cpp  bin.cpp  builtin_commands.cpp  command.cpp  common.cpp  data.cpp  entry.cpp  global_object.h  internal.cpp  internal.h  json.cpp  log.cpp  loop.cpp  module.cpp  node.cpp  object.cpp  schema.cpp  terminal.cpp  var.cpp
core/src/module/: core_module.cpp  http_module.cpp  tcp_bin_module.cpp  terminal_module.cpp  ws_module.cpp
core/src/service/: http_server.cpp  service.cpp  subscribe_service.cpp  tcp_bin_client.cpp  tcp_bin_server.cpp  terminal.cpp  terminal_server.cpp  terminal_session.cpp  ws_server.cpp
core/terminal/: CMakeLists.txt  main.cpp
core/test/: CMakeLists.txt  test_basic_traits.cpp  test_command.cpp  test_data_serialize.cpp  test_loop.cpp  test_manager.cpp  test_node.cpp  test_node_basic.cpp  test_node_bench.cpp  test_node_management.cpp  test_node_navigation.cpp  test_node_path.cpp  test_node_signal.cpp  test_node_value.cpp  test_object.cpp  test_ordered_hashmap.cpp  test_var.cpp
core/win/StackWalker/: BaseException.cpp  BaseException.h
cpp/example/: CMakeLists.txt  example_entry.cpp  ve.json
cpp/qt/: CMakeLists.txt
cpp/qt/imol/: CMakeLists.txt
cpp/qt/veBench/: CMakeLists.txt
cpp/qt/veExample/: CMakeLists.txt
cpp/qt/veQml/: CMakeLists.txt
cpp/qt/veQtBase/: CMakeLists.txt
cpp/qt/veService/: CMakeLists.txt
cpp/qt/veTerminal/: CMakeLists.txt
cpp/ros/: CMakeLists.txt
cpp/ros/veFastDDS/: CMakeLists.txt
cpp/ros/veRosBase/: CMakeLists.txt
cpp/rtt/: CMakeLists.txt  README.md
cpp/rtt/veRttCore/: CMakeLists.txt
main/: CMakeLists.txt  test.cpp
main/asset/: asset.qrc
main/asset/language/: imol_cn.json  imol_ru.json
main/src/: Test1Module.cpp  Test1Module.h  Test2Module.cpp  Test2Module.h  main.cpp
qt/: CMakeLists.txt
qt/example/bench/: CMakeLists.txt
qt/example/demo/: CMakeLists.txt  example.json
qt/include/: veCommon
qt/program/browser/: CMakeLists.txt  browser.json
qt/src/base/: common.cpp  node_qobject.cpp  node_signal_bridge.cpp  qt_module.cpp  schema_qt.cpp  schema_qt_register.cpp  tbs_qt.cpp  var_qt.cpp
qt/src/imol/: logmanager.cpp  modulemanager.cpp  networkmanager.cpp
qt/src/qml/: qml_register.cpp  qt_launch_module.cpp  quick_node.cpp
qt/src/service/: command_service.cpp  command_service.h  tbs_shell.cpp  xservice_client.cpp  xservice_client.h  xservice_server.cpp
qt/src/terminal/: server.h  terminal_widget.cpp
ros/: ARCHITECTURE.md  CMakeLists.txt  SERVICE_CALL_USAGE.md
ros/include/: veRos
ros/program/: CMakeLists.txt
ros/src/base/: backend.cpp  parser.cpp  runtime.cpp  service.cpp  topic.cpp  yaml_schema.cpp
ros/src/dds/: bridge.cpp  dynamic.cpp
ros/src/module/: ros_demo_module.cpp  ros_module.cpp
ros/src/service/: command_service.cpp
ros/veFastDDS/src/: bridge.cpp  participant.cpp
ros/veRos/: CMakeLists.txt
ros/veRos/src/: data.cpp
rtt/: CMakeLists.txt
rtt/XService/: CMakeLists.txt
rtt/veRttCore/src/: command_object.cpp  json_ref.cpp  meta.cpp  net_factory.cpp  net_object.cpp  object.cpp  result.cpp  server_net_object.cpp
service/: CMakeLists.txt
service/src/: cbs.cpp  cbs.h  command_service.cpp  command_service.h  xservice_client.cpp  xservice_client.h  xservice_server.cpp  xservice_server.h
ve/: CMakeLists.txt  libve.version
ve/include/ve/: entry.h  global.h
ve/js/: README.md  veservice.js
ve/js/ve-app/: index.html  package.json  tsconfig.json  vite.config.ts
ve/js/ve-mcp/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
ve/js/ve-sdk/: package-lock.json  package.json
ve/platform/linux/: rescue.cpp
ve/platform/unsupported/: rescue.cpp
ve/platform/win/: rescue.cpp
ve/program/: CMakeLists.txt  main.cpp  ve.json
ve/program/example/: CMakeLists.txt  ExampleModule.cpp  ExampleModule.h
ve/program/mcp/: CMakeLists.txt  main.cpp
ve/py/: API_ALIGNMENT.md  README.md  pyproject.toml
ve/py/examples/: benchmark.py  fastapi_example.py  simple_test.py  test_alignment.py  test_async.py  test_client.py
ve/py/ve_client/: __init__.py  async_client.py  async_transports.py  client.py  transports.py  types.py
ve/py/ve_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ve/scripts/: _curl_body_async.json  _curl_body_sync.json  _ws_moz_test.ps1  verify-repl-http-ws.ps1
ve/src/: asio_impl.cpp  bin.cpp  builtin_commands.cpp  data.cpp  entry.cpp  json.cpp  node.cpp  pipeline.cpp  schema.cpp  terminal_util.h  var.cpp
ve/src/core/: base.cpp  bin.cpp  command.cpp  factory.cpp  hashfuncs.cpp  json.cpp  log.cpp  loop.cpp  module.cpp  node.cpp  parse_util.h  pipeline.cpp  schema.cpp  step.cpp  var.cpp
ve/src/module/: client_module.cpp  core_module.cpp  http_module.cpp  jsonrpc_module.cpp  server_module.cpp  tcp_bin_module.cpp  terminal_module.cpp  terminal_tcp_client_module.cpp  ws_module.cpp
ve/src/service/: http_server.cpp  jsonrpc_server.cpp  node_http_server.cpp  (+25 more)
ve/test/: CMakeLists.txt  main.cpp  test_basic_traits.cpp  test_command.cpp  test_containers.cpp  test_data.cpp  test_data_serialize.cpp  test_hashfuncs.cpp  test_log.cpp  test_loop.cpp  test_md.cpp  test_node_basic.cpp  test_node_bench.cpp  test_node_management.cpp  test_node_path.cpp  test_node_protocol.cpp  test_node_serialize.cpp  test_node_signal.cpp  test_node_value.cpp  test_object.cpp  test_ordered_hashmap.cpp  test_small_vector.cpp  test_terminal_builtin.cpp  test_values.cpp  test_var.cpp  ve_test.h
(+335 files in other folders)
